--- a/config.toml
+++ b/config.toml
@@ -1,17 +1,29 @@
-blog_url = "http://192.168.56.11:1111"
-blog_dir = "/home/zack/source/server/blog"
-blog_build_dir = "/home/zack/source/server/blog/public"
-dest_dir = "/home/zack/source/server/editor/target/blog"
+#bind = "192.168.56.11:2222"
+#url = "http://192.168.56.11:2222"
+
+#blog_url = "http://192.168.56.11:1111"
 path_regex = "<!--relative path \\((.*)\\)-->"
-bind = "192.168.56.11:2222"
-url = "http://192.168.56.11:2222"
+#blog_dir = "/home/zack/source/server/blog"
+#blog_build_dir = "/home/zack/source/server/blog/public"
+#dest_dir = "/home/zack/source/server/editor/target/blog"
+
 build_command = ["zola", "build"]
-edit_template = "templates/edit.html"
 create_revision = ["git", "commit", "-am"]
 stage_revision = ["git", "add"]
-revert_template = "templates/revert.html"
+reset_command = ["git", "clean", "-fd"]
 list_revisions = ["git", "log", "--pretty=format:%h %ad %s"]
 revert_revision = ["git", "revert"]
-publish_template = "templates/publish.html"
+fix_revert = ["git", "revert", "--abort"]
+#post_rebuild = ["git", "push"]
+
 draft_template = "templates/draft.html"
-post_rebuild = ["git", "push"]
+publish_template = "templates/publish.html"
+edit_template = "templates/edit.html"
+revert_template = "templates/revert.html"
+
+bind = "127.0.0.1:2222"
+url = "http://127.0.0.1:2222"
+blog_url = "http://127.0.0.1:1111"
+blog_dir = "C:/users/zack/source/server/blog"
+blog_build_dir = "C:/users/zack/source/server/blog/public"
+dest_dir = "C:/users/zack/source/server/editor/target/blog"
